# active-trace

./: .gitignore  CHANGES.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_create_tenants.py  002_create_auth_tables.py  003_create_rbac_tables.py  004_create_audit_logs.py  005_create_estructura_academica.py  006_extend_usuarios_asignaciones.py  007_create_padron.py  008_create_calificaciones.py  009_umbral_agrupaciones_finales.py  (+8 more)
backend/app/: __init__.py  main.py
backend/scripts/: seed_demo_ecosystem.py  seed_dev.py
backend/tests/: conftest.py  test_analisis_api.py  test_analisis_rules.py  test_app_startup.py  test_audit_api.py  test_audit_service.py  test_auditoria_api.py  test_auth_api.py  test_auth_dependencies.py  test_auth_roles.py  test_auth_service.py  test_aviso_rules.py  test_avisos_api.py  test_calificacion_rules.py  test_calificaciones_api.py  test_coloquios_api.py  test_comunicacion_rules.py  test_comunicacion_template.py  test_comunicaciones_api.py  test_config.py  test_cors.py  test_database.py  test_encuentro_rules.py  test_encuentros_api.py  test_equipos_api.py  test_estructura_api.py  test_evaluacion_rules.py  test_guardias_api.py  test_health.py  test_impersonation_api.py  test_liquidaciones_api.py  test_logging.py  test_models_base.py  test_observability.py  test_padron_api.py  test_perfil_inbox_api.py  test_permission_service.py  test_permissions.py  test_programa_academico_rules.py  test_programas_api.py  (+14 more)
(+382 files in other folders)
